add step to input type number

--- a/templates/new_cannabis_form.html
+++ b/templates/new_cannabis_form.html
@@ -21,13 +21,13 @@
             </select>
 
             <label for="thc">THC Content (%):</label>
-            <input type="number" id="thc" name="thc">
+            <input type="number" step="0.01" id="thc" name="thc">
 
             <label for="cbd">CBD Content (%):</label>
-            <input type="number" id="cbd" name="cbd">
+            <input type="number"  step="0.01" id="cbd" name="cbd">
 
             <label for="total_cannabinoids">Total Cannabinoids (%):</label>
-            <input type="number" name="total_cannabinoids">
+            <input type="number"  step="0.01" name="total_cannabinoids">
             
             <input type="submit" value="Add Cannabis Product">
         </form>
